Fix z-index issue on grid banner

--- a/assets/base.css
+++ b/assets/base.css
@@ -3974,6 +3974,7 @@ details-disclosure > details {
                     background: #e5e5dc; /* carrara */
                     padding: 2rem;
                     border-radius: var(--media-radius);
+                    z-index: 1;
 
                     &:before {
                         content: '';
@@ -3982,7 +3983,10 @@ details-disclosure > details {
                         top: 0;
                         width: 100%;
                         height: 100%;
+                    }
 
+                    h3 {
+                        margin-top: 0;
                     }
                 }
             }
